--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(nlohmann_json 3.2.0 REQUIRED)
 find_package(Threads REQUIRED)
 find_package(tdscpp REQUIRED)
+find_package(wscpp REQUIRED)
 
 set(SRC_FILES src/tdsweb.cpp)
 
