--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(nlohmann_json 3.2.0 REQUIRED)
 find_package(Threads REQUIRED)
 find_package(tdscpp REQUIRED)
 find_package(wscpp REQUIRED)
+find_package(xlcpp REQUIRED)
 
 set(SRC_FILES src/tdsweb.cpp)
 
