--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,18 @@ target_link_libraries(tdsweb tdscpp)
 target_link_libraries(tdsweb xlcpp)
 target_link_libraries(tdsweb Threads::Threads)
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND WIN32)
+    target_link_options(tdsweb PRIVATE -gcodeview)
+endif()
+
 if(MSVC)
     target_compile_options(tdsweb PRIVATE /W4)
-else()
-    target_compile_options(tdsweb PRIVATE -Wall -Wextra -Wno-address-of-packed-member)
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    if(WIN32)
+        target_compile_options(tdsweb PRIVATE -Wall -Wextra -Wno-address-of-packed-member -gcodeview)
+    else()
+        target_compile_options(tdsweb PRIVATE -Wall -Wextra -Wno-address-of-packed-member)
+    endif()
 endif()
 
 install(TARGETS tdsweb DESTINATION bin)
