--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,13 +25,15 @@ target_link_libraries(tdsweb Threads::Threads)
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND WIN32)
     target_link_options(tdsweb PRIVATE -gcodeview)
+elseif(MSVC)
+    target_link_options(tdsweb PRIVATE /DEBUG)
 endif()
 
 if(MSVC)
-    target_compile_options(tdsweb PRIVATE /W4)
+    target_compile_options(tdsweb PRIVATE /W4 /EHsc)
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     if(WIN32)
-        target_compile_options(tdsweb PRIVATE -Wall -Wextra -Wno-address-of-packed-member -gcodeview)
+        target_compile_options(tdsweb PRIVATE -Wall -Wextra -Wno-address-of-packed-member -Wconversion -gcodeview)
     else()
         target_compile_options(tdsweb PRIVATE -Wall -Wextra -Wno-address-of-packed-member)
     endif()
